@@ -42,6 +42,10 @@ Release date: TBA
 
   Closes pylint-dev/pylint#10112
 
+* Fix crash when `sys.modules` contains lazy loader objects during checking.
+
+  Closes #2686
+  Closes pylint-dev/pylint#8589
 
 
 What's New in astroid 3.3.8?
